GitHub Alert Update

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<title>kentakang.com</title>
 	</head>
 	<body>
+		<div class="alert_box">
+			<p>You can check the <a href="http://kentakang.com">kentakang.com</a> source from <a href="https://github.com/kentakang/kentakang.com" target="blank">GitHub</a></p>
+		</div>
 		<div class="content">
 			<div class="header">
 				<a class="animated slideInUp logo" href="http://kentakang.com">@kentakang</a>
