--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 			<p>You can check the <a href="http://kentakang.com">kentakang.com</a> source from <a href="https://github.com/kentakang/kentakang.com" target="blank">GitHub</a></p>
 		</div>
 		<div class="content">
-			<div class="portfolio"></div>
+			<div class="portfolio">
+				<div class="article1">
+					<div class="item_text">
+						<h1>Portfolio</h1>
+						<p>Design and Programming portfolio of<br>Kenta Kang</p>
+					</div>
+				</div>
+			</div>
 			<div class="header">
 				<a class="animated slideInUp logo" href="http://kentakang.com">@kentakang</a>
 			</div>
