--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="nav">
 				<ul class="animated bounceInUp">
 					<li><a href="https://twitter.com/lansys05" target="blank">Twitter</a></li>
-					<li><a id="call_portfolio" href="#" target="blank">Portfolio</a></li>
+					<li><a id="call_portfolio" href="#">Portfolio</a></li>
 					<li><a href="mailto:kentakang@icloud.com" target="blank">E-Mail</a></li>
 					<li><a href="https://github.com/kentakang/" target="blank">Github</a></li>
 				</ul>
