Update Portfolio Function

--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
 		</div>
 		<div class="content">
 			<div class="portfolio">
-				<div class="article1">
-					<div class="item_text">
-						<h1>Portfolio</h1>
-						<p>Design and Programming portfolio of<br>Kenta Kang</p>
-					</div>
+				<div class="port_header">
+					<h1>Portfolio</h1>
+					<p>Design and Programming portfolio of<br>Kenta Kang</p>
 				</div>
+				<a class="close_btn" href="#">&times;</a>
 			</div>
 			<div class="header">
 				<a class="animated slideInUp logo" href="http://kentakang.com">@kentakang</a>
