--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 	<head>
 		<meta charset="UTF-8">
+		<meta name=viewport content="width=device-width,initial-scale=1">
 		<link href="./css/style.css" rel="stylesheet">
 		<link href="./css/animate.css" rel="stylesheet">
 		<script src="http://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
@@ -9,6 +10,7 @@
 		<title>kentakang.com</title>
 	</head>
 	<body>
+        <div class="a"></div>
 		<div class="alert_box">
 			<p>You can check the <a href="http://kentakang.com">kentakang.com</a> source from <a href="https://github.com/kentakang/kentakang.com" target="blank">GitHub Repository</a></p>
 		</div>
