--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="ko">
 	<head>
 		<meta charset="UTF-8">
-		<meta name=viewport content="width=device-width,initial-scale=1">
 		<link href="./css/style.css" rel="stylesheet">
 		<link href="./css/animate.css" rel="stylesheet">
 		<script src="http://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="./js/script.js"></script>
+		<script src="./js/holder.min.js"></script>
 		<title>kentakang.com</title>
 	</head>
 	<body>
-        <div class="a"></div>
 		<div class="alert_box">
 			<p>You can check the <a href="http://kentakang.com">kentakang.com</a> source from <a href="https://github.com/kentakang/kentakang.com" target="blank">GitHub Repository</a></p>
 		</div>
@@ -19,6 +18,13 @@
 				<div class="port_header">
 					<h1>Portfolio</h1>
 					<p>Design and Programming portfolio of<br>Kenta Kang</p>
+				</div>
+				<div class="port_content">
+					<ul>
+						<li><a href="http://kentakang.com" target="blank"><img src="./img/bg.jpg"><p>kentakang.com</p></a></li>
+						<li><a><img data-src="holder.js/400x300"><p>Blank</p></a></li>
+						<li><a><img data-src="holder.js/400x300"><p>Blank</p></a></li>
+					</ul>
 				</div>
 				<a class="close_btn" href="#">&times;</a>
 			</div>
