Add First Portfolio image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				</div>
 				<div class="port_content">
 					<ul>
-						<li><a href="http://kentakang.com" target="blank"><img src="./img/bg.jpg"><p>kentakang.com</p></a></li>
+						<li><a href="http://kentakang.com" target="blank"><img src="./img/portfolio_1.png"><p>kentakang.com</p></a></li>
 						<li><a><img data-src="holder.js/400x300"><p>Blank</p></a></li>
 						<li><a><img data-src="holder.js/400x300"><p>Blank</p></a></li>
 					</ul>
