--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 	<head>
 		<meta charset="UTF-8">
+		<meta name=viewport content="width=device-width,initial-scale=1">
 		<link href="./css/style.css" rel="stylesheet">
 		<link href="./css/animate.css" rel="stylesheet">
 		<script src="http://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
