--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 	<head>
 		<meta charset="UTF-8">
+		<meta name=viewport content="width=device-width,initial-scale=1">
 		<link href="./css/style.css" rel="stylesheet">
 		<link href="./css/animate.css" rel="stylesheet">
 		<script src="http://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
@@ -14,7 +15,7 @@
 			<p>You can check the <a href="http://kentakang.com">kentakang.com</a> source from <a href="https://github.com/kentakang/kentakang.com" target="blank">GitHub Repository</a></p>
 		</div>
 		<div class="content">
-			<div class="portfolio">
+			<div id="portfolio" class="portfolio">
 				<div class="port_header">
 					<h1>Portfolio</h1>
 					<p>Design and Programming portfolio of<br>Kenta Kang</p>
@@ -25,6 +26,20 @@
 						<li><a><img data-src="holder.js/400x300"><p>Blank</p></a></li>
 						<li><a><img data-src="holder.js/400x300"><p>Blank</p></a></li>
 					</ul>
+				</div>
+				<a class="close_btn" href="#">&times;</a>
+			</div>
+			<div id="license" class="portfolio">
+				<div class="port_header">
+					<h1>OSS Notice</h1>
+					<p>kentakang.com is use Open Source Library.<br>We provide a Source Code of Open Source Library.</p>
+				</div>
+				<div class="port_content">
+					<p>
+					 <a href="http://kentakang.com">This website</a> is Copyright by 2016 <a href="http://www.kentastudio.com">Kentastudio</a> All Rights Reserved.<br><br>
+					 <a href="https://github.com/kentakang/kentakang.com" target="blank">kentakang.com</a> : <br>Copyright by 2016 Kentastudio All Rights Reserved.<br>Licensed under the <a href="http://opensource.org/licenses/MIT" target="blank">MIT License</a><br><br>
+					  <a href="https://github.com/daneden/animate.css" target="blank">Animate.css</a> : <br>Copyright (c) 2016 Daniel Eden.<br>Licensed under the <a href="http://opensource.org/licenses/MIT" target="blank">MIT License</a>
+					</p>
 				</div>
 				<a class="close_btn" href="#">&times;</a>
 			</div>
@@ -40,5 +55,6 @@
 				</ul>
 			</div>
 		</div>
+		<p class="footer center">You can check <a href="#" id="call_license">Open Source Notice</a> of <a href="http://kentakang.com">kentakang.com</a></p>
 	</body>
 </html>
