--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 		<link href="./css/style.css" rel="stylesheet">
 		<link href="./css/animate.css" rel="stylesheet">
 		<script src="http://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-		<script type="text/javascript" src="http://cdn.kentakang.com/script_kentakang.js"></script>
-		<script src="http://cdn.kentakang.com/holder.min.js"></script>
+		<script type="text/javascript" src="./js/script_kentakang.js"></script>
 		<title>kentakang.com</title>
 	</head>
 	<body>
@@ -23,8 +22,8 @@
 				<div class="port_content">
 					<ul>
 						<li><a href="http://kentakang.com" target="blank"><img src="http://cdn.kentakang.com/portfolio_1.jpg"><p>kentakang.com</p></a></li>
-						<li><a><img data-src="holder.js/400x300"><p>Blank</p></a></li>
-						<li><a><img data-src="holder.js/400x300"><p>Blank</p></a></li>
+						<li><a><img src="http://cdn.kentakang.com/portfolio_0.jpg"><p>Blank</p></a></li>
+						<li><a><img src="http://cdn.kentakang.com/portfolio_0.jpg"><p>Blank</p></a></li>
 					</ul>
 				</div>
 				<a class="close_btn" href="#">&times;</a>
