--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 				</div>
 				<div class="port_content">
 					<ul>
-						<li><a href="http://kentakang.com" target="blank"><img src="http://cdn.kentakang.com/portfolio_1.jpg"><p>kentakang.com</p></a></li>
-						<li><a><img src="http://cdn.kentakang.com/portfolio_0.jpg"><p>Blank</p></a></li>
-						<li><a><img src="http://cdn.kentakang.com/portfolio_0.jpg"><p>Blank</p></a></li>
+						<li><a href="http://kentakang.com" target="blank"><img src="./img/portfolio_1.jpg"><p>kentakang.com</p></a></li>
+						<li><a><img src="./img/portfolio_0.jpg"><p>Blank</p></a></li>
+						<li><a><img src="./img/portfolio_0.jpg"><p>Blank</p></a></li>
 					</ul>
 				</div>
 				<a class="close_btn" href="#">&times;</a>
