ref #2 add background click event

--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
 			</div>
 		</div>
 		<p class="footer center">You can check <a href="#" id="call_license">Open Source Notice</a> of <a href="http://kentakang.com">kentakang.com</a></p>
+		<div id="curtain"></div>
 	</body>
 </html>
