--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="port_content">
 					<ul>
 						<li><a href="http://kentakang.com" target="blank"><img src="./img/portfolio_1.jpg"><p>kentakang.com</p></a></li>
-						<li><a><img src="./img/portfolio_0.jpg"><p>Blank</p></a></li>
+						<li><a href="http://www.kentastudio.com"><img src="./img/portfolio_2.jpg"><p>Kentastudio</p></a></li>
 						<li><a><img src="./img/portfolio_0.jpg"><p>Blank</p></a></li>
 					</ul>
 				</div>
