Modify Twitter to Blog

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			</div>
 			<div class="nav">
 				<ul class="animated bounceInUp">
-					<li><a href="https://twitter.com/kentakang_" target="blank">Twitter</a></li>
+					<li><a href="http://blog.kentakang.com" target="blank">Blog</a></li>
 					<li><a id="call_portfolio" href="#">Portfolio</a></li>
 					<li><a href="mailto:kentakang@icloud.com" target="blank">E-Mail</a></li>
 					<li><a href="https://github.com/kentakang/" target="blank">Github</a></li>
