--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<meta name=viewport content="width=device-width,initial-scale=1">
 		<link href="./css/style.css" rel="stylesheet">
 		<link href="./css/animate.css" rel="stylesheet">
-		<script src="http://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+		<script src="//code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="./js/script_kentakang.js"></script>
 		<title>kentakang.com</title>
 	</head>
 	<body>
 		<div class="alert_box">
-			<p>You can check the <a href="http://kentakang.com">kentakang.com</a> source from <a href="https://github.com/kentakang/kentakang.com" target="blank">GitHub Repository</a></p>
+			<p>You can check the <a href="https://kentakang.com">kentakang.com</a> source from <a href="https://github.com/kentakang/kentakang.com" target="blank">GitHub Repository</a></p>
 		</div>
 		<div class="content">
 			<div id="portfolio" class="portfolio">
@@ -21,8 +21,8 @@
 				</div>
 				<div class="port_content">
 					<ul>
-						<li><a href="http://kentakang.com" target="blank"><img src="./img/portfolio_1.jpg"><p>kentakang.com</p></a></li>
-						<li><a href="http://www.kentastudio.com"><img src="./img/portfolio_2.jpg"><p>Kentastudio</p></a></li>
+						<li><a href="https://kentakang.com" target="blank"><img src="./img/portfolio_1.jpg"><p>kentakang.com</p></a></li>
+						<li><a href="https://www.kentastudio.com"><img src="./img/portfolio_2.jpg"><p>Kentastudio</p></a></li>
 						<li><a><img src="./img/portfolio_0.jpg"><p>Blank</p></a></li>
 					</ul>
 				</div>
@@ -35,7 +35,7 @@
 				</div>
 				<div class="port_content">
 					<p>
-					 <a href="http://kentakang.com">This website</a> is Copyright by 2016 <a href="http://www.kentastudio.com">Kentastudio</a> All Rights Reserved.<br><br>
+					 <a href="https://kentakang.com">This website</a> is Copyright by 2016 <a href="https://www.kentastudio.com">Kentastudio</a> All Rights Reserved.<br><br>
 					 <a href="https://github.com/kentakang/kentakang.com" target="blank">kentakang.com</a> : <br>Copyright by 2016 Kentastudio All Rights Reserved.<br>Licensed under the <a href="http://opensource.org/licenses/MIT" target="blank">MIT License</a><br><br>
 					 <a href="https://github.com/daneden/animate.css" target="blank">Animate.css</a> : <br>Copyright (c) 2016 Daniel Eden.<br>Licensed under the <a href="http://opensource.org/licenses/MIT" target="blank">MIT License</a>
 					</p>
@@ -54,7 +54,7 @@
 				</ul>
 			</div>
 		</div>
-		<p class="footer center">You can check <a href="#" id="call_license">Open Source Notice</a> of <a href="http://kentakang.com">kentakang.com</a></p>
+		<p class="footer center">You can check <a href="#" id="call_license">Open Source Notice</a> of <a href="https://kentakang.com">kentakang.com</a></p>
 		<div id="curtain"></div>
 	</body>
 </html>
